initialized main pages, fleshed out contact

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>Garrett Compston</title>
+		<title>Garrett Compston - Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,10 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="index.html">Garrett Compston</a></h1>
-					<h3 style="font-size: large;">-KC1QYH-</h3>
-					<p>Defender of the niche, <br> knower of the unnecessary</p>
+					<h1 id="logo"><a href="index.html">Home</a></h1>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -48,7 +45,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Welcome!</h2>
+										<h2>Blog</h2>
 										<p style="font-size: x-large;">You have reached the home base of Garrett Compston, KC1QYH<br />
 											Here you'll find my blog, projects, and other things I find cool</p>
 									</header>
