set basis for blog and projects

--- a/blog.html
+++ b/blog.html
@@ -38,23 +38,27 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
-							<section id="one">
+						<!-- Blog Intro -->
+						 	<section>
 								<div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
 										<h2>Blog</h2>
-										<p style="font-size: x-large;">You have reached the home base of Garrett Compston, KC1QYH<br />
-											Here you'll find my blog, projects, and other things I find cool</p>
+										<p style="font-size: x-large;">This page contains some featured blog posts.
+											Visit the blog directory for more. <!--create href for directory-->
+										</p>
 									</header>
-									<p>I'm Garrett, I'm a coder, musician, amateur radio operator, and lover of Calvin and Hobbes 
-										(just to name a few things). I think about things sometimes and write about them on my 
-										<a href="blog.html">blog. </a>And occasionally my thoughts come to life as
-										<a href="projects.html">projects.</a> I care about media preservation, doing things yourself,
-										and enjoying life.</p>
-									<p>Please enjoy your stay!</p></p>
+								</div>
+							</section>
+						
+						<!-- Blog about blogs -->
+							<section id="two">
+								<div class="container">
+									<h3>Why I care about blogs</h3> <!--Create href to blog when made-->
+									<h1>6/15/2024</h1>
+									<p>I just think they're neat...</p>
 								</div>
 							</section>
 
