--- a/projects.html
+++ b/projects.html
@@ -46,15 +46,8 @@
 								<div class="container">
 									<header class="major">
 										<h2>Projects</h2>
-										<p style="font-size: x-large;">You have reached the home base of Garrett Compston, KC1QYH<br />
-											Here you'll find my blog, projects, and other things I find cool</p>
+										<p style="font-size: x-large;">These are some things I've done or made</p>
 									</header>
-									<p>I'm Garrett, I'm a coder, musician, amateur radio operator, and lover of Calvin and Hobbes 
-										(just to name a few things). I think about things sometimes and write about them on my 
-										<a href="blog.html">blog. </a>And occasionally my thoughts come to life as
-										<a href="projects.html">projects.</a> I care about media preservation, doing things yourself,
-										and enjoying life.</p>
-									<p>Please enjoy your stay!</p></p>
 								</div>
 							</section>
 
