--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
-							<section id="one">
+						<!-- Intro -->
+							<section>
 								<div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
 								</div>
