set external links to open in new tab

--- a/blog.html
+++ b/blog.html
@@ -66,10 +66,10 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="icons">
-								<li style="font-size: x-large;"><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-								<li style="font-size: x-large;"><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li style="font-size: x-large;"><a href="https://github.com/gartastrophe" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li style="font-size: x-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li style="font-size: x-large;"><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
+								<li style="font-size: x-large;"><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+								<li style="font-size: x-large;"><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
+								<li style="font-size: x-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2024 Garrett Compston </li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
