--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1 id="logo"><a href="index.html">Home</a></h1>
+					<h1 id="logo"><a href="index.html">Back to Home</a></h1>
 				</header>
 				<nav id="nav">
 					<ul>
