added new background

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- Intro -->
 							<section>
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/vermont_sky_banner.JPG" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
