updated for link to be "active"

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="blog.html" class="active">Blog</a></li>
+						<li><a href="blog.html">Blog</a></li>
 						<li><a href="projects.html">Projects</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="contact.html" class="active">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
