--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,8 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="blog.html" class="active">Blog</a></li>
-						<li><a href="projects.html">Projects</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="projects.html" class="active">Projects</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
