hperlinked first blog

--- a/blog.html
+++ b/blog.html
@@ -56,8 +56,8 @@
 						<!-- Blog about blogs -->
 							<section id="two">
 								<div class="container">
-									<h3>Why I care about blogs</h3> <!--Create href to blog when made-->
-									<h1>6/15/2024</h1>
+									<h3><a>Why I care about blogs</a></h3> <!--Create href to blog when made-->
+									<h1>June 19, 2024</h1>
 									<p>I just think they're neat...</p>
 								</div>
 							</section>
