--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
 						<!-- Blog about blogs -->
 							<section id="two">
 								<div class="container">
-									<h3><a>Why I care about blogs</a></h3> <!--Create href to blog when made-->
+									<h3><a href="blog-whyICareAboutBlogs.html">Why I care about blogs</a></h3>
 									<h1>June 19, 2024</h1>
 									<p>I just think they're neat...</p>
 								</div>
