--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
 										<h2 style="margin-top: 30px;">Contact</h2>
 									</header>
 									<p>
-										My social links can be found below. If you would like to email me directly, you can
-										send to either of the following: <br>
+										My social links are hyperlinked to the icons found below. 
+										If you would like to email me directly, you can send to either of the following: <br>
 										Primary: garrettccompston (at) gmail (dot) com <br>
 										School: compston.g (at) northeastern (dot) edu
 										
