a bit empty rn :/

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>Projects</h2>
-										<p style="font-size: x-large;">These are some things I've done or made</p>
+										<p style="font-size: x-large;">
+											These are some things I've done or made. Sorry it's a bit empty rn :/
+										</p>
 									</header>
 								</div>
 							</section>
