--- a/blog-directory.html
+++ b/blog-directory.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>Garrett Compston - Blog</title>
+		<title>Garrett Compston - Blog Directory</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="blog.html" class="active">Blog</a></li>
+						<li><a href="blog.html">Blog</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
@@ -34,31 +34,17 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Main -->
 					<div id="main">
-
-						<!-- Blog Intro -->
-						 	<section>
-								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
-								</div>
+						<!-- Contact Info -->
 								<div class="container">
 									<header class="major">
-										<h2>Blog</h2>
-										<p style="font-size: x-large;">This page contains some featured blog posts.
-											Visit the <a href="blog-directory.html">blog directory</a> for more.
-										</p>
+										<h2 style="margin-top: 30px;">Blog Directory</h2>
 									</header>
-								</div>
-							</section>
-						
-						<!-- Blog about blogs -->
-							<section id="two">
-								<div class="container">
-									<h3><a href="blog-whyICareAboutBlogs.html">Why I care about blogs</a></h3>
-									<h1>June 19, 2024</h1>
-									<p>I just think they're neat...</p>
+									<p>
+										uhhhhhh just kidding! I haven't written enough of these to need a directory,
+										so I guess... uhhhh... head back to the <a href="blog.html">main page</a>?
+									</p>
 								</div>
 							</section>
 
@@ -66,10 +52,10 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="icons">
-								<li style="font-size: x-large;"><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
-								<li style="font-size: x-large;"><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
-								<li style="font-size: x-large;"><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
-								<li style="font-size: x-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
+								<li style="font-size: xx-large;"><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
+								<li style="font-size: xx-large;"><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+								<li style="font-size: xx-large;"><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
+								<li style="font-size: xx-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2024 Garrett Compston </li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
