--- a/blog-whyICareAboutBlogs.html
+++ b/blog-whyICareAboutBlogs.html
@@ -64,6 +64,7 @@
 										- Garrett
 									</p>
 								</div>
+								<!-- TODO: Add a button here to return to blog home -->
 							</section>
 
 				<!-- Footer -->
