--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/line-avatar.png" alt="" /></span>
 					<h1 id="logo"><a href="index.html">Garrett Compston</a></h1>
 					<h3 style="font-size: large;">-KC1QYH-</h3>
 					<p>Defender of the niche, <br> knower of the unnecessary</p>
@@ -78,7 +78,7 @@
 								<li style="font-size: x-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; 2024 Garrett Compston </li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2024 Garrett Compston</li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
