--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
 						<!-- Blog Intro -->
 						 	<section>
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/vermont_sky_banner.JPG" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
