--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 									<p>
 										Please enjoy your stay!
 									</p>
+									<p>
+										P.S. Thanks to my brother, Grayson for the avatar art!
+									</p>
 								</div>
 							</section>
 
