--- a/blog-whyICareAboutBlogs.html
+++ b/blog-whyICareAboutBlogs.html
@@ -36,7 +36,7 @@
 			<div id="wrapper">
 				<!-- Main -->
 					<div id="main">
-						<!-- Contact Info -->
+						<!-- Blog Writing -->
 								<div class="container">
 									<header class="major">
 										<h2 style="margin-top: 30px;">Why I care about blogs</h2>
@@ -65,7 +65,6 @@
 									</p>
 								</div>
 								<!-- TODO: Add a button here to return to blog home -->
-							</section>
 
 				<!-- Footer -->
 					<section id="footer">
