--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,8 @@
 									<header class="major">
 										<h2>Blog</h2>
 										<p style="font-size: x-large;">This page contains some featured blog posts.
-											Visit the <a href="blog-directory.html">blog directory</a> for more.
+											You can click on the titles to read the full thing!
+											<!-- Navigate this page by year: --> 
 										</p>
 									</header>
 								</div>
