change setup on blogs

--- a/blog.html
+++ b/blog.html
@@ -57,9 +57,9 @@
 						<!-- Blog about blogs -->
 							<section id="two">
 								<div class="container">
-									<h3><a href="blog-whyICareAboutBlogs.html">Why I care about blogs</a></h3>
-									<h1>June 19, 2024</h1>
-									<p>I just think they're neat...</p>
+									<h3>
+										<a href="blog-whyICareAboutBlogs.html">Why I care about blogs</a>
+									</h3>
 								</div>
 							</section>
 
