--- a/blog-whyICareAboutBlogs.html
+++ b/blog-whyICareAboutBlogs.html
@@ -61,10 +61,9 @@
 										a scroll through. No pressure! Hope you enjoy.
 									</p>
 									<p>
-										- Garrett
+										<a href="blog.html">&larr; All Blogs</a>
 									</p>
 								</div>
-								<!-- TODO: Add a button here to return to blog home -->
 
 				<!-- Footer -->
 					<section id="footer">
