--- a/blog.html
+++ b/blog.html
@@ -46,20 +46,29 @@
 								<div class="container">
 									<header class="major">
 										<h2>Blog</h2>
-										<p style="font-size: x-large;">This page contains some featured blog posts.
+										<p style="font-size: large;">
+											This page contains some featured blog posts.
 											You can click on the titles to read the full thing!
 											<!-- Navigate this page by year: --> 
 										</p>
+										<!--
+										<p>
+											<a href="#2024">2024</a>
+										</p>
+										-->
 									</header>
 								</div>
 							</section>
 						
-						<!-- Blog about blogs -->
-							<section id="two">
+						<!-- 2024 -->
+							<section id="2024">
 								<div class="container">
-									<h3>
+									<h2>
+										2024
+									</h2>
+									<p>
 										<a href="blog-whyICareAboutBlogs.html">Why I care about blogs</a>
-									</h3>
+									</p>
 								</div>
 							</section>
 
