updates to pages

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 									<p>
 										To give a bit of an intro... I'm Garrett, I'm a coder, musician, amateur radio operator, and 
 										lover of Calvin and Hobbes (just to name a few things). I think about things sometimes and 
-										write about them on my <a href="blog.html">blog. </a>
-										And occasionally my thoughts come to life as <a href="projects.html">projects.</a> 
+										write about them on my <a href="blog.html">blog</a>, 
+										and occasionally my thoughts come to life as <a href="projects.html">projects.</a> 
 										I care about media preservation, doing things yourself,
 										and enjoying life.
 									</p>
