--- a/hire-me.html
+++ b/hire-me.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>Garrett Compston - Contact</title>
+		<title>Garrett Compston - Hire Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,17 +39,10 @@
 						<!-- Contact Info -->
 								<div class="container">
 									<header class="major">
-										<h2 style="margin-top: 30px;">Contact</h2>
+										<h2 style="margin-top: 30px;">Hire Me</h2>
 									</header>
 									<p>
-										My social links are hyperlinked to the icons found below. 
-										If you would like to email me directly, you can send to either of the following: <br>
-										Primary: garrettccompston (at) gmail (dot) com <br>
-										School: compston.g (at) northeastern (dot) edu
-									</p>
-									<p>
-										If you are interested in hiring me, please head to the 
-										<a href="hire-me.html">'Hire Me'</a> page.
+										This is the area for my new hire me page.
 									</p>
 								</div>
 							</section>
@@ -58,10 +51,10 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="icons">
-								<li style="font-size: xx-large;"><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
-								<li style="font-size: xx-large;"><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
-								<li style="font-size: xx-large;"><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
-								<li style="font-size: xx-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
+								<li><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2024 Garrett Compston </li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
