--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/line-avatar.png" alt="" /></span>
 					<h1 id="logo"><a href="index.html">Garrett Compston</a></h1>
-					<h3 style="font-size: large;">-KC1QYH-</h3>
+					<h3 style="font-size: large;">-KW1RM-</h3>
 					<p>Defender of the niche, <br> knower of the unnecessary</p>
 				</header>
 				<nav id="nav">
@@ -50,8 +50,8 @@
 									<header class="major">
 										<h2>Welcome!</h2>
 										<p style="font-size: x-large;">
-											You have reached the home base of Garrett Compston, KC1QYH<br />
-											Here you'll find my blog, projects, and other things I find cool
+											You have reached the home base of Garrett Compston, KW1RM.<br />
+											Here you'll find my blog, projects, and other things I find cool.
 										</p>
 									</header>
 									<p>
