first entry to page. need to fill in projects later

--- a/hire-me.html
+++ b/hire-me.html
@@ -39,8 +39,99 @@
 										<h2 style="margin-top: 30px;">Hire Me</h2>
 									</header>
 									<p>
-										This is the area for my new hire me page.
+										To whomever has reached this page,
 									</p>
+									<p>
+										You are presumably here because you are interested in hiring me. If you are mostly just 
+										looking for a list of my work experience and skills, you can browse my 
+										<a href="https://www.linkedin.com/in/garrett-compston-87571322a" 
+										target="_blank" rel="noopener noreferrer">LinkedIn</a> 
+										and take a look at my [hyperlink]resume. However, these are a rather limited snapshot of my 
+										life and experiences, so if you are interested, this space will be for a more animated 
+										discussion of these things providing, perhaps, a more nuanced view of myself.
+									</p>
+									<nav>
+										<p>
+											Navigate this page: 
+											<a href="#about">About me</a> - 
+											<a href="#skills">Skills</a> - 
+											<a href="#work-exp">Work Experience</a> - 
+											<a href="#projects">Projects</a>
+										</p>
+									</nav>
+									
+									<section id="about">
+										<h3>About me</h3>
+										<p>
+											First, a brief introduction of myself in a general sense. I am currently a student at 
+											Northeastern University, taking combined studies in computer science and music technology. 
+											My mom enrolled me in a ‘Computers for Kids’ class at the age of three, and around that 
+											same time, I started singing along to whatever CDs my dad put on in the car, so this 
+											combination could be seen as a bit of a foregone conclusion. I haven’t been able to pick 
+											a single interest in my life either, which could be the cause of the combination major. 
+											And while some may see this as a weakness, I take great pride in the myriad of skills I 
+											have picked up throughout my life, despite some of these skills’ perceived usefulness. 
+											In addition, I have at least seen some need to specialize, again, through combination, 
+											settling on digital signal processing. It began with an interest in audio signals, and 
+											expanded to many others, the main signals driving the expansion being radio. This was 
+											first spurred on by joining the student broadcast station at Northeastern, WRBB, and 
+											subsequently the amateur radio club, W1KBN, and then getting licensed myself, having now 
+											upgraded to the amateur extra class. I am innately curious about just about everything, 
+											so I rarely get bored in a role.
+										</p>
+									</section>
+									<section id="skills">
+										<h3>Skills</h3>
+										<p>
+											I have a number of programming languages that I can utilize with varying degrees of fluency. 
+											C and C++ are my main languages, which I started using with more frequency with my interest 
+											in audio processing. I am also familiar with Java from my coursework, C# from scripting within 
+											Unity, HTML and CSS from personal web design, and Python which I’ve used on and off for quick 
+											scripting ever since I first started learning to program.
+										</p>
+										<p>
+											I have also been granted a number of skills from interests, hobbies, and occasionally classes. 
+											I am familiar with RF and RF design from my involvement with amateur radio and broadcast radio 
+											at Northeastern and in my personal time. Both of these have also given me a working 
+											understanding of networks. Branching into music technology skills; I have a good understanding 
+											of acoustic principles, I’ve never been able to settle on a DAW so I can use just about any 
+											that is set in front of me with proficiency given time, and I’ve worked enough live and 
+											recording setups to know one end of an XLR cable from the other. On the programming side, 
+											I am familiar with Max/MSP, openPD, and the JUCE framework. 
+										</p>
+									</section>
+									<section id="work-exp">
+										<h3>Work Experience</h3>
+										<h2 style="font-size: x-large;">WRBB 104.9 FM</h2>
+										<h1><i>October 2021 - Present</i></h1>
+										<p>
+											I have done a lot of jobs at WRBB. I started on the tech team (which was officially 
+											reformed the semester that I joined), and soon after became a DJ and began acting 
+											as assistant technical director. In the summer of 2022, I started working as assistant 
+											programming director and eventually took over the position in January of 2023. I held 
+											the position for a year, making significant changes to the scheduling process and aiding 
+											in the transition to a new studio in the fall of 2023. I relinquished the position in 
+											January of 2024 to ensure that the changes that I had made would be effective for the 
+											people coming after me. At this time, I am continuing to DJ and help with technical 
+											challenges. 
+										</p>
+										<h2 style="font-size: x-large;">RF Venue</h2>
+										<h1><i>January 2024 - June 2024</i></h1>
+										<p>
+											RF Venue was my first official Northeastern co-op, and I was also the first co-op that 
+											the company had taken on. Since my leaving, they were happy enough with my work that 
+											they have decided to continue with hiring co-ops from Northeastern. Due to my highly 
+											interdisciplinary background, I ended up doing a number of jobs during my time at RF Venue. 
+											If you are unfamiliar with the company, they mainly make antennas and distribution systems 
+											for wireless microphones and IEMs. As such, my combination of knowledge in both audio and 
+											radio was very helpful. I completed a number of quality assurance tasks for some of the 
+											products which were in development at the time, namely the Combine 6 and the Spectrum 
+											Recorder. However, I also completed a number of data processing and visualization tasks 
+											for the sales team, as well as helped to create educational content for marketing. All in 
+											all, I enjoyed my time during the co-op and I appreciate all of the different roles I was 
+											able to explore.
+										</p>
+									</section>
 								</div>
 							</section>
 
