blogs update: new post, changed formatting

--- a/blog-why-i-care-about-blogs.html
+++ b/blog-why-i-care-about-blogs.html
@@ -37,7 +37,7 @@
 								<div class="container">
 									<header class="major">
 										<h2 style="margin-top: 30px;">Why I care about blogs</h2>
-										<h3>June 19, 2024</h3>
+										<h1>June 19, 2024 <br><br></h1>
 									</header>
 									<p>
 										It is 2024 and I am coming out as pro-blogging. That’s right, with countless social 
