added projects to hire me

--- a/hire-me.html
+++ b/hire-me.html
@@ -132,6 +132,87 @@
 											able to explore.
 										</p>
 									</section>
+
+									<section id="projects">
+										<h3>Personal Projects</h3>
+										<h2 style="font-size: x-large;">Analog Synthesizer Composition and Sound Design</h2>
+										<h1><i>Completed December 2022</i></h1>
+										<p>
+											This project was completed for my Intro to Music Technology course at Northeastern. 
+											The project was a deep dive into the controls and sound design of analog synthesizers. 
+											The intention was a better understanding of the audio effects that we have access to 
+											in an analog space. I personally became infatuated with the Oberheim OB-X synthesizer, 
+											but, without a spare $6k lying around, chose the wonderful free emulation, OB-Xd by 
+											discoDSP. I chose to create a horror soundtrack to fully explore the stranger, grittier 
+											sounds that an analog synth is great at. My professor, Victor Zappi, made the comment 
+											that the sound of the final product is very similar to 80s horror films, as many of their 
+											soundtracks were made in the exact fashion as I made mine, with every sound in the 
+											composition being created by the synth. You can listen to the compositions at the 
+											following links: 
+											<a href=https://drive.google.com/file/d/1LCRxgrSeMGxwJJGFNPJVHZzss3g-Y8ZV/view?usp=drive_link
+											target="_blank" rel="noopener noreferrer">Windy Night</a>, 
+											<a href= https://drive.google.com/file/d/1KLCmakr9aM7k_kwyjfXiuccNeideXM3n/view?usp=drive_link
+											target="_blank" rel="noopener noreferrer">Signal</a>.
+										</p>
+										<h2 style="font-size: x-large;">Photo Editing Suite</h2>
+										<h1><i>Completed April 2023</i></h1>
+										<p>
+											This was a project for my Object Oriented Design course at Northeastern. I completed it 
+											alongside my partner on the project and my friend, Eddy Liu. We both contributed to the 
+											overall design. Eddy’s focus was much more on the applied effects on imported images 
+											while I spent more time with the UI elements. The code for this project is linked on my 
+											GitHub <a href=https://github.com/gartastrophe/photo-editor 
+											target="_blank" rel="noopener noreferrer">here</a>.
+										</p>
+
+										<h2 style="font-size: x-large;">Mandalorian Armor Senior Project</h2>
+										<h1><i>Completed May 2021</i></h1>
+										<p>
+											My senior year of high school was weird. Let’s just start with that. I graduated in 2021 
+											to make things abundantly clear. However, I was able to pursue a senior project in the 
+											last couple months of my senior year. I was rather enamored with 3D printing at the time 
+											(still am) and wanted to do a project for that. I had found a model for a Mandalorian 
+											helmet online and decided I’d model the rest of the armor myself for the project. 
+											My project advisor, Mr. Brown (who was also my physics and engineering teacher) and I had 
+											to pitch this in a way that still sounded educational, so we said it was to learn rapid 
+											prototyping. And you know what? It really was. I walked away quite proficient with 
+											Fusion360 and with an honest to god understanding of why it takes so long to bring a 
+											product from conception to version final. I created a google site 
+											<a href=https://sites.google.com/view/gcompston-senior-project/home
+											target="_blank" rel="noopener noreferrer">(linked here)</a> back when I completed the 
+											project to log my progress. I am still particularly proud of the vambraces. The pauldrons 
+											could use some work, but in my defense, my understanding of 3D modeling was not one that 
+											often took into account the human body (not really a free draw tool user) so it kinda 
+											makes sense that they didn’t fit my shoulders. Overall, I still like this insight into 
+											where I was back in high school. 
+										</p>
+										<h3>Other people’s projects I’ve worked on</h3>
+										<h2 style="font-size: x-large;">Sound Recording for "Egress" Short Film</h2>
+										<h1><i>Premiered April 2024</i></h1>
+										<p>
+											Roshni Subramonian, a producer/director friend of mine asked me if I would help with 
+											sound recording for a short film they were working on. That shoot ended up being the 
+											short film “Egress”. I worked on all of the on-location recording. You can 
+											<a href=https://youtu.be/y8lpCNwHyCg?si=VULekNFdD4gksa-z
+											target="_blank" rel="noopener noreferrer">watch it on YouTube</a> which has the full 
+											cast and crew credits in the description. 
+										</p>
+										<h2 style="font-size: x-large;">Talk Sick Violin Recording</h2>
+										<h1><i>Premiered April 2024</i></h1>
+										<p>
+											My friend Josh Tochner goes under the artist name 
+											<a href=https://open.spotify.com/artist/6veWWBHCx8rKZohP5MWFxu
+											target="_blank" rel="noopener noreferrer">Talk Sick</a>
+											and makes some awesome music. I’ve actually gotten to record some violin for a couple 
+											of his tracks, 
+											<a href=https://open.spotify.com/track/21Dr6sjGn0f6JnyWenQiJs?si=529a942d60784421
+											target="_blank" rel="noopener noreferrer">"Scared of Nothing"</a> 
+											and 
+											<a href=https://open.spotify.com/track/40AZFabEAWEnJEuWuf275W?si=572f24373b5a4f8f
+											target="_blank" rel="noopener noreferrer">"Tell Myself"</a>. 
+											Go take a listen! 
+										</p>
+									</section>
 								</div>
 							</section>
 
