--- a/hire-me.html
+++ b/hire-me.html
@@ -46,7 +46,9 @@
 										looking for a list of my work experience and skills, you can browse my 
 										<a href="https://www.linkedin.com/in/garrett-compston-87571322a" 
 										target="_blank" rel="noopener noreferrer">LinkedIn</a> 
-										and take a look at my [hyperlink]resume. However, these are a rather limited snapshot of my 
+										and take a look at my 
+										<a href="images/resume.pdf" target="_blank" rel="noopener noreferrer">resume</a>. 
+										However, these are a rather limited snapshot of my 
 										life and experiences, so if you are interested, this space will be for a more animated 
 										discussion of these things providing, perhaps, a more nuanced view of myself.
 									</p>
@@ -198,7 +200,7 @@
 											cast and crew credits in the description. 
 										</p>
 										<h2 style="font-size: x-large;">Talk Sick Violin Recording</h2>
-										<h1><i>Premiered April 2024</i></h1>
+										<h1><i>Releases in 2022 and 2024</i></h1>
 										<p>
 											My friend Josh Tochner goes under the artist name 
 											<a href=https://open.spotify.com/artist/6veWWBHCx8rKZohP5MWFxu
