standardized title formatting, general updates

--- a/blog.html
+++ b/blog.html
@@ -36,18 +36,16 @@
 					<div id="main">
 
 						<!-- Blog Intro -->
-						 	<section>
-								<div class="image main" data-position="center">
-									<img src="images/vermont_sky_banner.JPG" alt="" />
-								</div>
+
 								<div class="container">
 									<header class="major">
-										<h2>Blog</h2>
-										<p style="font-size: large;">
-											This page contains some featured blog posts.
-											You can click on the titles to read the full thing!
-											<!-- Navigate this page by year: --> 
-										</p>
+										<h2 style="margin-top: 30px;">Blog</h2>
+									</header>
+									<p>
+										This page contains some featured blog posts.
+										You can click on the titles to read the full thing!
+										<!-- Navigate this page by year: --> 
+									</p>
 										<!--
 										<p>
 											<a href="#2024">2024</a>
@@ -55,7 +53,6 @@
 										-->
 									</header>
 								</div>
-							</section>
 						
 						<!-- 2024 -->
 							<section id="2024">
