--- a/projects.html
+++ b/projects.html
@@ -34,21 +34,14 @@
 
 				<!-- Main -->
 					<div id="main">
-
-						<!-- One -->
-							<section id="one">
-								<div class="image main" data-position="center">
-									<img src="images/vermont_sky_banner.JPG" alt="" />
-								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Projects</h2>
-										<p style="font-size: x-large;">
-											These are some things I've done or made. Sorry it's a bit empty rn :/
-										</p>
+										<h2 style="margin-top: 30px;">Projects</h2>
 									</header>
+										<p>
+											These are some things I've done or made. Sorry it's a bit empty rn :/ will be adding soon!
+										</p>
 								</div>
-							</section>
 
 				<!-- Footer -->
 					<section id="footer">
