--- a/blog.html
+++ b/blog.html
@@ -61,8 +61,8 @@
 										2024
 									</h2>
 									<p>
-										<a href="blog-i-learned-to-use-a-sewing-machine.html">I learned to use a sewing machine</a><br>
-										<a href="blog-why-i-care-about-blogs.html">Why I care about blogs</a>
+										<a href="\blog-posts\blog-i-learned-to-use-a-sewing-machine.html">I learned to use a sewing machine</a><br>
+										<a href="\blog-posts\blog-why-i-care-about-blogs.html">Why I care about blogs</a>
 									</p>
 								</div>
 							</section>
