--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/line-avatar.png" alt="" /></span>
-					<h1 id="logo"><a href="index.html">Garrett Compston</a></h1>
+					<h1 id="logo">Garrett Compston</h1>
 					<h3 style="font-size: large;">-KW1RM-</h3>
 					<p>Defender of the niche, <br> knower of the unnecessary</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="blog.html" class="active">Blog</a></li>
-						<li><a href="projects.html">Projects</a></li>
+						<li><a href="about-me.html">About Me</a></li>
+						<li><a href="audio.html">Audio</a></li>
+						<li><a href="radio.html">Radio</a></li>
+						<li><a href="blog.html">Blog</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
@@ -48,16 +50,15 @@
 										<h2>Welcome!</h2>
 										<p style="font-size: x-large;">
 											You have reached the home base of Garrett Compston, KW1RM.<br />
-											Here you'll find my blog, projects, and other things I find cool.
+											Here you'll find my blog, projects from various disciplines, and other things I find cool.
 										</p>
 									</header>
 									<p>
-										To give a bit of an intro... I'm Garrett, I'm a coder, musician, amateur radio operator, and 
-										lover of Calvin and Hobbes (just to name a few things). I think about things sometimes and 
-										write about them on my <a href="blog.html">blog</a>, 
-										and occasionally my thoughts come to life as <a href="projects.html">projects.</a> 
-										I care about media preservation, doing things yourself,
-										and enjoying life.
+										If you have come to this site looking for my music or other general audio work, please head to 
+										the <a href="audio.html">audio</a> page. 
+									</p>
+									<p>
+										If you arrived at this site by way of ham bands, head over to the <a href="radio.html">radio</a> page. 
 									</p>
 									<p>
 										Please enjoy your stay!
@@ -67,6 +68,7 @@
 									</p>
 								</div>
 							</section>
+						</div>
 
 				<!-- Footer -->
 					<section id="footer">
