--- a/about-me.html
+++ b/about-me.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>Garrett Compston - Blog</title>
+		<title>Garrett Compston</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,14 +18,14 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1 id="logo"><a href="index.html">Back to Home</a></h1>
+					<h1 id="logo">Back to Home</h1>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="about-me.html">About Me</a></li>
-						<li><a href="audio.html">Projects</a></li>
+						<li><a href="about-me.html" class="active">About Me</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="audio.html">Audio</a></li>
 						<li><a href="radio.html">Radio</a></li>
-						<li><a href="blog.html" class="active">Blog</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
@@ -37,37 +37,23 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Blog Intro -->
-
+						<!-- Intro -->
+							<section>
 								<div class="container">
 									<header class="major">
-										<h2 style="margin-top: 30px;">Blog</h2>
+										<h2>About me</h2>
 									</header>
 									<p>
-										This page contains some featured blog posts.
-										You can click on the titles to read the full thing!
-										<!-- Navigate this page by year: --> 
-									</p>
-										<!--
-										<p>
-											<a href="#2024">2024</a>
-										</p>
-										-->
-									</header>
-								</div>
-						
-						<!-- 2024 -->
-							<section id="2024">
-								<div class="container">
-									<h2>
-										2024
-									</h2>
-									<p>
-										<a href="/blog-posts/blog-i-learned-to-use-a-sewing-machine.html">I learned to use a sewing machine</a><br>
-										<a href="/blog-posts/blog-why-i-care-about-blogs.html">Why I care about blogs</a>
+										To give a bit of an intro... I'm Garrett, I'm a coder, musician, amateur radio operator, and 
+										lover of Calvin and Hobbes (just to name a few things). I think about things sometimes and 
+										write about them on my <a href="blog.html">blog</a>, 
+										and occasionally my thoughts come to life as <a href="projects.html">projects.</a> 
+										I care about media preservation, doing things yourself,
+										and enjoying life.
 									</p>
 								</div>
 							</section>
+						</div>
 
 				<!-- Footer -->
 					<section id="footer">
@@ -79,7 +65,7 @@
 								<li style="font-size: x-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; 2024 Garrett Compston </li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2024 Garrett Compston</li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
