--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
+						<li><a href="about-me.html">About Me</a></li>
+						<li><a href="audio.html">Projects</a></li>
+						<li><a href="radio.html">Radio</a></li>
 						<li><a href="blog.html">Blog</a></li>
-						<li><a href="projects.html">Projects</a></li>
 						<li><a href="contact.html" class="active">Contact</a></li>
 					</ul>
 				</nav>
