--- a/hire-me.html
+++ b/hire-me.html
@@ -22,9 +22,11 @@
 				</header>
 				<nav id="nav">
 					<ul>
+						<li><a href="about-me.html">About Me</a></li>
+						<li><a href="audio.html">Projects</a></li>
+						<li><a href="radio.html">Radio</a></li>
 						<li><a href="blog.html">Blog</a></li>
-						<li><a href="projects.html">Projects</a></li>
-						<li><a href="contact.html" class="active">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
 			</section>
@@ -222,10 +224,10 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
-								<li><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
-								<li><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
+								<li style="font-size: x-large;"><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
+								<li style="font-size: x-large;"><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+								<li style="font-size: x-large;"><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
+								<li style="font-size: x-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; 2024 Garrett Compston </li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
