changed all to read audio rather than projects

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="about-me.html">About Me</a></li>
-						<li><a href="audio.html">Projects</a></li>
+						<li><a href="audio.html">Audio</a></li>
 						<li><a href="radio.html">Radio</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="contact.html" class="active">Contact</a></li>
