--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="about-me.html">About Me</a></li>
-						<li><a href="audio.html">Projects</a></li>
+						<li><a href="audio.html">Audio</a></li>
 						<li><a href="radio.html">Radio</a></li>
 						<li><a href="blog.html" class="active">Blog</a></li>
 						<li><a href="contact.html">Contact</a></li>
