--- a/radio.html
+++ b/radio.html
@@ -23,9 +23,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="about-me.html">About Me</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="audio.html">Projects</a></li>
+						<li><a href="audio.html">Audio</a></li>
 						<li><a href="radio.html" class="active">Radio</a></li>
+						<li><a href="blog.html">Blog</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
@@ -35,36 +35,24 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<div id="main">
+				<div id="main">
 
-						<!-- Blog Intro -->
-
-								<div class="container">
-									<header class="major">
-										<h2 style="margin-top: 30px;">Radio</h2>
-										<h1>
-											Here are some of the audio projects that I have worked on, listed in 
-											reverse chronological order.
-										</h1>
-									</header>
-								</div>
-						
-							<section id="Egress">
-								<div class="container">
-									<h2>
-										Sound Recordist for "Egress"
-									</h2>
-									<h1><i>Premiered April 2024</i></h1>
-									<p>
-										Roshni Subramonian, a producer/director friend of mine asked me if I would help with 
-										sound recording for a short film they were working on. That shoot ended up being the 
-										short film “Egress”. I worked on all of the on-location recording. You can 
-										<a href=https://youtu.be/y8lpCNwHyCg?si=VULekNFdD4gksa-z
-										target="_blank" rel="noopener noreferrer">watch it on YouTube</a> which has the full 
-										cast and crew credits in the description. 
-									</p>
-								</div>
-							</section>
+					<!-- Intro -->
+						<section>
+							<div class="container">
+								<header class="major">
+									<h2>About me</h2>
+								</header>
+								<p>
+									To give a bit of an intro... I'm Garrett, I'm a coder, musician, amateur radio operator, and 
+									lover of Calvin and Hobbes (just to name a few things). I think about things sometimes and 
+									write about them on my <a href="blog.html">blog</a>, 
+									and occasionally my thoughts come to life as <a href="projects.html">projects.</a> 
+									I care about media preservation, doing things yourself,
+									and enjoying life.
+								</p>
+							</div>
+						</section>
 					</div>
 
 				<!-- Footer -->
