--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/line-avatar.png" alt="" /></span>
+					<!-- <span class="image avatar"><img src="images/line-avatar.png" alt="" /></span> -->
 					<h1 id="logo">Garrett Compston</h1>
 					<h3 style="font-size: large;">-KW1RM-</h3>
 					<p>Defender of the niche, <br> knower of the unnecessary</p>
@@ -32,6 +32,14 @@
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
+				<footer>
+					<ul class="icons">
+						<li style="font-size: x-large;"><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
+						<li style="font-size: x-large;"><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+						<li style="font-size: x-large;"><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
+						<li style="font-size: x-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
+					</ul>
+				</footer>
 			</section>
 
 		<!-- Wrapper -->
@@ -73,12 +81,6 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="container">
-							<ul class="icons">
-								<li style="font-size: x-large;"><a href="https://www.linkedin.com/in/garrett-compston-87571322a" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
-								<li style="font-size: x-large;"><a href="https://www.instagram.com/gccompston/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
-								<li style="font-size: x-large;"><a href="https://github.com/gartastrophe" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
-								<li style="font-size: x-large;"><a href="mailto:garrettccompston@gmail.com" class="icon solid fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
-							</ul>
 							<ul class="copyright">
 								<li>&copy; 2024 Garrett Compston</li><li>Design based on: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
